--- a/ChangeLog
+++ b/ChangeLog
@@ -13,7 +13,8 @@
 	* the first version of TAB completion
 	* all system and device command are now defined via structures
 	* malloc and strdup safe
-	* ERET fix, LBU fix, epc rewrite fix (thx ???)
+	* ERET fix, LBU fix, epc rewrite fix (thx Matej Pivoluska, Martin
+	  Horváth, Jakub Kotrla)
 	* code polishing
 
 2004-03-23	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
