Applied fix patches (Lubo).

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 2005-01-08	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
 
 	* MTC0 fix (thx Ondrej Palkovsky)
+	* applied fixes by Lubo
 
 2005-01-08	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
 	Version 1.2.18
