--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 
 	* MTC0 fix (thx Ondrej Palkovsky)
 	* applied fixes by Lubo
+	* code polishing
 
 2005-01-08	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
 	Version 1.2.18
