--- a/README
+++ b/README
@@ -2,9 +2,7 @@
 MIPS system simulator
 32bit variant of R4400
 
-actual version:	http://nenya.ms.mff.cuni.cz/~holub/msim/
+Actual version:	http://nenya.ms.mff.cuni.cz/~holub/msim/
 
-to compile type:
-
-	./configure
-	make install
+to compile and install type:
+./configure && make install
