--- a/ChangeLog
+++ b/ChangeLog
@@ -2,11 +2,13 @@
 # MSIM Changelog
 #
 
-2005-01-08	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
+
+2005-03-03	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
 
 	* MTC0 fix (thx Ondrej Palkovsky)
 	* applied fixes by Lubo
 	* code polishing
+	* polishing of check RQ
 
 2005-01-08	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
 	Version 1.2.18
