--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # MSIM Changelog
 #
 
+2005-10-10	Jakub Jermar <jermar@itbs.cz>
+	* TLB Modification exception fix
+
 2005-09-20	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
 
 	* applied path by Ondrej Palkovsky to add 4kc support
