--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 # MSIM Changelog
 #
 
+2006-06-03	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
+	* missing stdio.h in input.c fixed
+	* MULT fix (thx Ondrej Palkovsky <ondrap@penguin.cz>)
+	* u_int64_t -> uint_64 fix
+
 2005-12-30	Ondrej Palkovsky <ondrap@penguin.cz>
 	* keybord keycode register is cleared after read operation; this
 	  allows to read new keycodes even with disabled interrupts
