--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 # MSIM Changelog
 #
 
+2006-11-23	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
+	* dprintf renamed to mprintf to avoid conflicts with libc (Martin
+	  Decky <decky@nenya.ms.mff.cuni.cz>
+
 2006-06-03	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
 	* missing stdio.h in input.c fixed
 	* MULT fix (thx Ondrej Palkovsky <ondrap@penguin.cz>)
