Several small fixes

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+
+system command rm
+
 headers usage test, optimizations
 detect screen width - intelligent output (fit to the screen) - & test it
 input module - move all about input into this module
@@ -6,9 +9,7 @@ add debug features - memory allocation
 	- show all allocated memory blocks
 	- check for unallocated memory at the end of the program or at the free function call
 	- allocation information - function, file and the line number
-stat
-msd, infodev - fix
-gdb remote debugging
+db remote debugging
 serial line
 network
 nonword write via read/write
