--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,8 @@
 # MSIM Changelog
 #
 
-2006-11-28	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
+2007-03-11	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
+	Version 1.3.2.1
 	* missing stdio.h in input.c fixed
 	* MULT fix (thx Ondrej Palkovsky <ondrap@penguin.cz>)
 	* u_int64_t -> uint_64 fix
@@ -10,6 +11,13 @@
 	  Decky <decky@nenya.ms.mff.cuni.cz>
 	* minor fixes
 	* goto has been renamed to continue
+	* autogen.sh added
+
+2006-10-09	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
+	Version 1.3.1
+
+	* dprintf* functions have been renamed to mprintf* to avoid conflicts
+	  with libc on some systems (thx to Martin Decky)
 
 2005-12-30	Ondrej Palkovsky <ondrap@penguin.cz>
 	* keybord keycode register is cleared after read operation; this
