--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,35 @@
 # MSIM Changelog
 #
 
+2008-06-05	Viliam Holub <holub@dsrg.mff.cuni.cz>
+	Version 1.3.4rc2
+	* LL-SC tracking fix (thx Jiri Svoboda)
+
+2007-12-17	Viliam Holub <holub@dsrg.mff.cuni.cz>
+	Version 1.3.4rc1
+	* dorder sychdown command fix (thx Andrej Krutak)
+	* ddisk and mem clean-up (thx Milan Burda)
+	* dtime now reads usec as well
+	* minor performance improvements
+	* badvaddr not set for all exceptions, fixed
+
+2007-11-30	Viliam Holub <holub@dsrg.mff.cuni.cz>
+	Version 1.3.3
+	* two-register dorder
+	* error messages fix
+	* cpu number fix
+
+2007-11-24	Viliam Holub <holub@dsrg.mff.cuni.cz>
+	* dorder has two registers now - enable/disable interrupt pending
+
+2007-11-23	Viliam Holub <holub@dsrg.mff.cuni.cz>
+	Version 1.3.2.3
+	* dorder infinite loop fix (thx David Matousek)
+
+2007-11-21	Viliam Holub <holub@dsrg.mff.cuni.cz>
+	Version 1.3.2.2
+	* applied patch by Martin Decky, several small fixes 
+
 2007-03-11	Viliam Holub <holub@nenya.ms.mff.cuni.cz>
 	Version 1.3.2.1
 	* missing stdio.h in input.c fixed
