--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2008-09-24 Martin Decky <decky@dsrg.mff.cuni.cz>
-	Version 1.3.4rc3
+	Version 1.3.4
 	* simplify build system
 	* split sources into multiple directories
 	* add GPL license
