--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-09-26 Martin Decky <decky@dsrg.mff.cuni.cz>
+	Version 1.3.5
+
 2008-09-24 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.4
 	* source cleanup
