--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-?? Martin Decky <decky@dsrg.mff.cuni.cz>
+	Version 1.3.6
+	* fix compilation in Cygwin
+
 2008-10-31 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.5.1
 	* fix console input in MinGW
