--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
-2008-11-?? Martin Decky <decky@dsrg.mff.cuni.cz>
+2009-01-19 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.6
 	* fix compilation in Cygwin
+	* use EPC of previous branch instruction if TLB exception
+	  on code fetch happens inside a branch delay slot
 
 2008-10-31 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.5.1
