--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-??-?? Martin Decky <decky@dsrg.mff.cuni.cz>
+	Version 1.3.7
+	*
+
 2009-01-19 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.6
 	* fix compilation in Cygwin
