--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-2009-??-?? Martin Decky <decky@dsrg.mff.cuni.cz>
+2009-02-02 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.7
-	*
+	* official reference manual in doc/reference.html
+	* minor string changes
 
 2009-01-19 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.6
