--- a/TODO
+++ b/TODO
@@ -3,7 +3,7 @@ add the cycle device
 
 input module - move all about input into this module
 add debug features - memory allocation
-	- first and last block check,
+	- first and last block check
 	- show all allocated memory blocks
 	- check for unallocated memory at the end of the program or at the free function call
 	- allocation information - function, file and the line number
