--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-11-02 Martin Decky <decky@dsrg.mff.cuni.cz>
+	Version 1.3.7.1
+	* add Gentoo ebuild and RPM spec file
+
 2009-02-02 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.7
 	* official reference manual in doc/reference.html
