--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-??-?? Martin Decky <decky@dsrg.mff.cuni.cz>
+	Version 1.3.?
+	* add support for DESTDIR into Makefile.in
+	  (thx Vojtech Horky)
+
 2009-11-02 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.7.1
 	* add Gentoo ebuild and RPM spec file
