--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Viliam Holub	<holub@dsrg.mff.cuni.cz>
-Martin Decky	<decky@dsrg.mff.cuni.cz>
+Viliam Holub	<holub@d3s.mff.cuni.cz>
+Martin Decky	<decky@d3s.mff.cuni.cz>
