--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,12 @@
-2009-??-?? Martin Decky <decky@d3s.mff.cuni.cz>
-	Version 1.3.?
+2010-??-?? Martin Decky <decky@d3s.mff.cuni.cz>
+	Version 1.3.8
 	* add support for DESTDIR into Makefile.in
 	  (thx Vojtech Horky)
 	* fix TLBWI implementation (thx Jan Zaloha
 	  and Vlastimil Babka)
-	* partially resurrect GDB support (thx Tomas
-	  Martinec)
+	* resurrect GDB support, better device management
+	  and various other improvements by Tomas
+	  Martinec
 
 2009-11-02 Martin Decky <decky@dsrg.mff.cuni.cz>
 	Version 1.3.7.1
