--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-??-?? Martin Decky <decky@d3s.mff.cuni.cz>
+	Version 1.4.0
+	* improve command line processing code
+	* code consolidation
+
 2010-10-05 Martin Decky <decky@d3s.mff.cuni.cz>
 	Version 1.3.8
 	* add support for DESTDIR into Makefile.in
