--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	Version 1.4.0
 	* improve command line processing code
 	* code consolidation
+	* port fixes from the 1.3 branch
 
 2010-10-05 Martin Decky <decky@d3s.mff.cuni.cz>
 	Version 1.3.8
