--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ add debug features
  - first and last block check
  - show all allocated memory blocks
  - check for unallocated memory at the end of the program or at the free function call
- - allocation information - function, file and the line number
+ - allocation information (function, file and the line number)
 serial line
 network
 graphics
