--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-10-07 Jan Papesch <janpapuch@seznam.cz>
+	Version 2.0.0
+	Added support for RISC-V
+
 2020-11-02 Vojtech Horky <horky@d3s.mff.cuni.cz>
     Version 1.4.2
     * halt simulation when XINT invoked without TTY
