--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-09-22 Vojtech Horky <horky@d3s.mff.cuni.cz>
+    Version 2.1.1
+    * fix broken device cleanup (#44)
+    * CI improvements
+
 2023-09-19 Vojtech Horky <horky@d3s.mff.cuni.cz>
     Version 2.1.0
     * switch documentation to read-the-docs
